--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:theme="@style/MainThemeWhite"
     tools:context=".fragments.FragmentQR">
@@ -35,13 +36,15 @@
                 android:layout_gravity="center"
                 >
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:id="@+id/Imagen_persona"
-                    android:src="@mipmap/img_person_perfile_foreground">
+                    android:src="@mipmap/img_person_perfile_foreground"
+                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+                    >
 
-                </ImageView>
+                </com.google.android.material.imageview.ShapeableImageView>
 
                 <RelativeLayout
                     android:layout_width="50dp"
