--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -68,4 +68,8 @@
         <item name="android:clickable">false</item> <!-- Deshabilita la interacción táctil -->
         <item name="android:focusable">false</item>
     </style>
+    <style name="roundedImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
