--- a/app/src/main/res/layout/list_item_qr.xml
+++ b/app/src/main/res/layout/list_item_qr.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Código"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textColor="@color/darkGrey"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -34,14 +34,14 @@
             android:layout_marginVertical="5dp"
             android:textColor="@color/darkGrey"
             android:text="a81j8s91jas"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="start">
 
             <TextView
                 android:id="@+id/tv_puntos"
