--- a/app/src/main/res/layout/fragment_creacion_qr.xml
+++ b/app/src/main/res/layout/fragment_creacion_qr.xml
@@ -13,7 +13,6 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="50dp"
         >
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -40,6 +39,12 @@
                 android:textAllCaps="false"
                 />
         </RelativeLayout>
+        <ProgressBar
+            android:id="@+id/cargando"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
         <ListView
             android:id="@+id/lv_listaqr"
             android:layout_width="wrap_content"
