--- a/app/src/main/res/layout/activity_home_admin.xml
+++ b/app/src/main/res/layout/activity_home_admin.xml
@@ -38,6 +38,12 @@
             android:layout_height="wrap_content"
             android:icon="@drawable/baseline_qr_code_scanner_24" />
 
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/ti_users"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/baseline_people_alt_24" />
+
     </com.google.android.material.tabs.TabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
