--- a/app/src/main/res/layout/custom_menu_item.xml
+++ b/app/src/main/res/layout/custom_menu_item.xml
@@ -18,6 +18,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="cerrar" />
+        android:text="" />
 </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
