--- a/app/src/main/res/menu/menu_overflow.xml
+++ b/app/src/main/res/menu/menu_overflow.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_btn_cerrar"
-        android:title="cerrar"
-        android:actionLayout="@layout/custom_menu_item"
+        android:title="Cerrar"
+
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/menu_btn_Listar_Canje"
+        android:title="Canje"
+        
         app:showAsAction="always"/>
 </menu>
