--- a/app/src/main/res/layout/activity_punto_verde_canje.xml
+++ b/app/src/main/res/layout/activity_punto_verde_canje.xml
@@ -6,21 +6,12 @@
     android:orientation="vertical"
     tools:context=".fragments.FragmentQR">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:background="@color/transparent"
-            android:visibility="visible" />
         <ListView
             android:id="@+id/lvlistar"
             android:layout_width="match_parent"
