--- a/app/src/main/res/layout/adapter_list_item_canjes.xml
+++ b/app/src/main/res/layout/adapter_list_item_canjes.xml
@@ -4,10 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingVertical="10dp">
+    android:paddingVertical="10dp"
+    android:paddingHorizontal="10dp">
+    <ProgressBar
+        android:id="@+id/cargando"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        />
 
     <!-- Diseño horizontal para el título y los puntos -->
     <LinearLayout
+        android:id="@+id/contenedor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
