--- a/app/src/main/res/layout/adapter_punto_verde.xml
+++ b/app/src/main/res/layout/adapter_punto_verde.xml
@@ -4,10 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingVertical="10dp">
+    android:paddingVertical="20dp"
+    android:paddingHorizontal="10dp">
 
     <!-- Diseño horizontal para el título y los puntos -->
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -17,6 +19,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/cargando"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
