--- a/app/src/main/res/layout/activity_home_admin.xml
+++ b/app/src/main/res/layout/activity_home_admin.xml
@@ -50,6 +50,12 @@
             android:layout_height="wrap_content"
             android:icon="@drawable/baseline_calendar_month_24" />
 
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/ti_aprobarCanje"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/baseline_add_shopping_cart_24" />
+
     </com.google.android.material.tabs.TabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
