Foto en admin y en usuario normal

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -76,6 +76,10 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+    <style name="circleImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">60%</item>
+    </style>
     <!-- Base application theme. -->
     <style name="Base.Theme.TpFinalTUSI" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
