--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -38,4 +38,16 @@
         android:foreground="@drawable/ic_action_name"
         android:visibility="gone"/>
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imagenperfil"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:visibility="gone"
+        android:src="@mipmap/img_person_perfile_foreground"
+        app:shapeAppearanceOverlay="@style/circleImageViewRounded" />
+
 </RelativeLayout>
