--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="transparent">#00000000</color>
     <color name="greyTransparent">#00000080</color>
     <color name="red">#FB594A</color>
+    <color name="yellow">#fff81f</color>
 </resources>
