--- a/app/src/main/res/layout/fragment_reporte.xml
+++ b/app/src/main/res/layout/fragment_reporte.xml
@@ -11,13 +11,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <Button
             android:id="@+id/ivGraficoContaminacion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="30dp"
-            android:paddingBottom="10dp"
-            app:srcCompat="@drawable/contamination_graphic" />
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/green"
+            android:text="♻ Ver grafico de contaminación ♻"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+             />
 
         <ProgressBar
             android:id="@+id/progressBar"
