--- a/app/src/main/res/layout/fragment_reporte.xml
+++ b/app/src/main/res/layout/fragment_reporte.xml
@@ -33,6 +33,20 @@
             android:layout_marginTop="40dp"
             android:background="@color/transparent"
             android:visibility="gone" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:entries="@array/opciones_filtro_reportes_usuario"
+            />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewNovedades"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:scrollbars="vertical" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewReportes"
