--- a/app/src/main/res/layout/fragment_crear_reporte.xml
+++ b/app/src/main/res/layout/fragment_crear_reporte.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentCrearReporte">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/transparent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_CrearReporte" />
+
     <EditText
         android:id="@+id/et_Titulo"
         android:layout_width="match_parent"
